# my-python-project

./: .pre-commit-config.yaml  LICENSE  README.md  SECURITY.md  pyproject.toml
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: python-package.yml
src/my_python_project/: __init__.py  example.py
tests/: __init__.py  test_example.py
